clean up android side

--- a/plugin.xml
+++ b/plugin.xml
@@ -26,9 +26,11 @@
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="CloudFivePush" >
                 <param name="android-package" value="com.cloudfiveapp.cordova.plugins.push.CloudFivePush"/>
-                <param name="gcmSenderId" value="6610000000" />
             </feature>
-             <!-- Replace this with your GCM sender ID from the google developer console -->
+        </config-file>
+        <config-file target="config.xml" parent="/*">
+            <!-- Replace this with your GCM sender ID from the google developer console -->
+            <gcmSenderId>253951406951</gcmSenderId>
         </config-file>
 
         <source-file src="src/android/CloudFivePush.java" target-dir="src/com/cloudfiveapp/cordova/plugins/push" />
@@ -46,7 +48,6 @@
 
             <permission android:name="$PACKAGE_NAME.permission.C2D_MESSAGE" android:protectionLevel="signature" />
             <uses-permission android:name="$PACKAGE_NAME.permission.C2D_MESSAGE" />
-            <activity android:name="com.cloudfiveapp.cordova.plugins.push.PushHandlerActivity"/>
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
@@ -58,6 +59,7 @@
                 </intent-filter>
             </receiver>
             <service android:name="com.cloudfiveapp.cordova.plugins.push.GCMIntentService" />
+            <activity android:name="com.cloudfiveapp.cordova.plugins.push.PushHandlerActivity"/>
         </config-file>      
      </platform>      
 </plugin>
